--- a/panelVisual/Properties/Resources.resx
+++ b/panelVisual/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="pelado" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\pelado.PNG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="no-image" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\no-image.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
